--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -20,6 +20,10 @@
 }
 
 @media screen and (max-width: 480px) {
+   body {
+      overflow: unset;
+   }
+
    .modal header {
       display: none;
    }
@@ -65,12 +69,12 @@
    }
 
    .mode-2 .lizard {
-      bottom: -20px;
+      bottom: -35px;
       left: 0;
    }
 
    .mode-2 .spock {
-      bottom: -20px;
+      bottom: -35px;
       right: 0;
    }
 
