--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,154 +1,1 @@
-@media screen and (max-width: 768px) {
-   .pick-body .circle {
-      width: 200px;
-      height: 200px;
-      padding: 1rem;
-   }
-
-   .result-container {
-      display: none;
-   }
-
-   .mobile-result-container {
-      display: block;
-   }
-
-   .wave-container {
-      width: 300px;
-      height: 300px;
-   }
-}
-
-@media screen and (max-width: 480px) {
-   body {
-      overflow: unset;
-   }
-
-   .modal header {
-      display: none;
-   }
-
-   header .banner {
-      height: 7rem;
-   }
-
-   .banner img {
-      width: 100px;
-   }
-
-   .score-board {
-      width: 100px;
-   }
-
-   .mode-1 .bg-img {
-      width: 170px;
-      height: 170px;
-   }
-
-   .mode-2 .bg-img {
-      width: 200px;
-      height: 200px;
-   }
-
-   /* mode 2 */
-
-   .mode-2 .rock {
-      top: -20px;
-      left: 50%;
-      transform: translateX(-50%);
-   }
-
-   .mode-2 .paper {
-      top: 24%;
-      left: -30px;
-   }
-
-   .mode-2 .scissors {
-      top: 24%;
-      right: -30px;
-   }
-
-   .mode-2 .lizard {
-      bottom: -35px;
-      left: 0;
-   }
-
-   .mode-2 .spock {
-      bottom: -35px;
-      right: 0;
-   }
-
-   .mode-1 .action-btn {
-      width: 100px;
-      height: 100px;
-   }
-
-   .mode-2 .action-btn {
-      width: 80px;
-      height: 80px;
-      padding: 0.7rem;
-   }
-
-   footer {
-      padding: 0 1rem;
-   }
-
-   .modal .rule {
-      max-width: unset;
-      height: 100%;
-   }
-
-   .modal .rule header {
-      display: none;
-   }
-
-   .mobile-title,
-   .mobile-close {
-      display: block;
-   }
-
-   /* pick */
-
-   .pick-body {
-      font-size: 1rem;
-   }
-
-   .inner-pick-body {
-      flex-direction: column-reverse;
-   }
-
-   .pick-body .circle {
-      width: 120px;
-      height: 120px;
-      padding: 1rem;
-   }
-
-   .pick-body .circle-container {
-      height: 10rem;
-      margin-top: 0;
-      margin-bottom: 2rem;
-   }
-
-   .wait-circle {
-      width: 90px;
-      height: 90px;
-   }
-
-   .wave-container {
-      width: 200px;
-      height: 200px;
-   }
-
-   .mobile-result-container {
-      margin-top: 2rem;
-   }
-
-   footer {
-      margin-top: 1rem;
-   }
-
-   footer .rule-btn-container {
-      display: flex;
-      justify-content: center;
-   }
-}
+@media screen and (max-width:768px){.pick-body .circle{width:200px;height:200px;padding:1rem}.result-container{display:none}.mobile-result-container{display:block}.wave-container{width:300px;height:300px}}@media screen and (max-width:480px){body{overflow:unset}.modal .rule header,.modal header{display:none}header .banner{height:7rem}.banner img,.score-board{width:100px}.mode-1 .bg-img{width:170px;height:170px}.mode-2 .bg-img,.wave-container{width:200px;height:200px}.mode-2 .rock{top:-20px;left:50%;transform:translateX(-50%)}.mode-2 .paper{top:24%;left:-30px}.mode-2 .scissors{top:24%;right:-30px}.mode-2 .lizard{bottom:-35px;left:0}.mode-2 .spock{bottom:-35px;right:0}.mode-1 .action-btn{width:100px;height:100px}.mode-2 .action-btn{width:80px;height:80px;padding:.7rem}footer{padding:0 1rem;margin-top:1rem}.modal .rule{max-width:unset;height:100%}.mobile-close,.mobile-title{display:block}.pick-body{font-size:1rem}.inner-pick-body{flex-direction:column-reverse}.pick-body .circle{width:120px;height:120px;padding:1rem}.pick-body .circle-container{height:10rem;margin-top:0;margin-bottom:2rem}.wait-circle{width:90px;height:90px}.mobile-result-container{margin-top:2rem}footer .rule-btn-container{display:flex;justify-content:center}}
